[package]
name = "WindowsRegistryPermissionsViewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.10"
winapi = "0.3.9"
windows-acl = "0.3.0"

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]